src/test/ui/coherence/coherence_inherent_cc.old.stderr
error[E0599]: no method named `the_fn` found for type `&coherence_inherent_cc_lib::TheStruct` in the current scope
  --> $DIR/coherence_inherent_cc.rs:26:11
   |
LL |         s.the_fn();
   |           ^^^^^^
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the following trait is implemented but not in scope, perhaps add a `use` for it:
           `use coherence_inherent_cc_lib::TheTrait;`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
